--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <!-- Estilos de cada components -->
-    <link rel="stylesheet" href="/pages/home/index.css">
+    <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="/components/header/header.css">
     <link rel="stylesheet" href="/components/form/form.css">
     <link rel="stylesheet" href="/components/footer/footer.css">
@@ -23,7 +23,7 @@
     <script src="/components/form/form.js"></script>
     <script src="/components/footer/footer.js"></script>
 
-    <script defer src="/pages/home/index.js"></script>
+    <script defer src="/index.js"></script>
     <script defer src="/components/header/button.js"></script>
     <script defer src="/components/form/menu.js"></script>
 
