--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         <section class="welcome">
             <!--Contenedor del header del home-->
             <h2 class="welcome__title">Hola <span class="highlighter">Soy Lautaro</span></h2>
-            <img class="welcome__img" src="/assets/home.png" alt="">
+            <img class="welcome__img" src="assets/home.png" alt="">
         </section>
         <section class="presentation">
             <div class="texts">
                 <h2 class="presentation__title">Mi Perfil</h2>
                 <p class="presentation__text">Soy desarrollador full-Stack y estudiante de Sistemas. Me apasiona la tecnologia y el avance que podemos lograr mediante su uso. En este momento me encuentro en crecimiento profesional, adquiriendo y perfeccionando las habilidades que necesito para el desarrollo de proyectos. </p>
             </div>
-            <img class="presentation__img" src="/assets/presentacion.png" alt="">
+            <img class="presentation__img" src="assets/presentacion.png" alt="">
         </section>
     
         <section class="services__shelled">
