--- a/pages/portfolio/indexPortfolio.html
+++ b/pages/portfolio/indexPortfolio.html
@@ -20,8 +20,8 @@
     <script src="components/portfolio/portfolio.js"></script>
     <script src="components/footer/footer.js"></script>
 
-    <script defer src="/pages/portfolio/indexPortfolio.js"></script>
-    <script defer src="/components/header/button.js"></script>
+    <script defer src="pages/portfolio/indexPortfolio.js"></script>
+    <script defer src="components/header/button.js"></script>
 
     <title>Document</title>
 </head>
@@ -35,7 +35,7 @@
         <section class="welcome">
             <!--Contenedor del header de services-->
             <h2 class="welcome__title">Mis <span class="highlighter">Proyectos</span></h2>
-            <img class="welcome__img" src="/assets/portfolio.png" alt="">
+            <img class="welcome__img" src="assets/portfolio.png" alt="">
         </section>
 
         <section class="portfolio__shelled">
