--- a/pages/services/indexServices.html
+++ b/pages/services/indexServices.html
@@ -18,8 +18,8 @@
     <script async src="components/services/services.js"></script>
     <script async src="components/footer/footer.js"></script>
 
-    <script defer src="/pages/services/indexServices.js"></script>
-    <script defer src="/components/header/button.js"></script>
+    <script defer src="pages/services/indexServices.js"></script>
+    <script defer src="components/header/button.js"></script>
     
     <title>Services</title>
 </head>
@@ -33,7 +33,7 @@
         <section class="welcome">
             <!--Contenedor del header de services-->
             <h2 class="welcome__title">Mis <span class="highlighter">Servicios</span></h2>
-            <img class="welcome__img" src="/assets/services.png" alt="">
+            <img class="welcome__img" src="assets/services.png" alt="">
         </section>
 
         <section class="services__shelled">
