--- a/pages/services/indexServices.html
+++ b/pages/services/indexServices.html
@@ -8,18 +8,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+    <!-- Rutas a los estilos -->
     <link rel="stylesheet" href="../services/indexServices.css">
-    <link rel="stylesheet" href="components/header/header.css">
-    <link rel="stylesheet" href="components/card/card.css">
-    <link rel="stylesheet" href="components/footer/footer.css">
+    <link rel="stylesheet" href="../components/header/header.css">
+    <link rel="stylesheet" href="../components/card/card.css">
+    <link rel="stylesheet" href="../components/footer/footer.css">
     
-    <script async src="components/header/header.js"></script>
-    <script async src="components/card/card.js"></script>
-    <script async src="components/services/services.js"></script>
-    <script async src="components/footer/footer.js"></script>
+    <!-- rutas a los components -->
+    <script async src="../components/header/header.js"></script>
+    <script async src="../components/card/card.js"></script>
+    <script async src="../components/services/services.js"></script>
+    <script async src="../components/footer/footer.js"></script>
 
+    <!-- Rutas a los archivos que poseen las funciones para agregar los components -->
     <script defer src="../services/indexServices.js"></script>
-    <script defer src="components/header/button.js"></script>
+    <script defer src="../components/header/button.js"></script>
     
     <title>Services</title>
 </head>
