--- a/pages/services/indexServices.html
+++ b/pages/services/indexServices.html
@@ -10,19 +10,19 @@
 
     <!-- Rutas a los estilos -->
     <link rel="stylesheet" href="../services/indexServices.css">
-    <link rel="stylesheet" href="../components/header/header.css">
-    <link rel="stylesheet" href="../components/card/card.css">
-    <link rel="stylesheet" href="../components/footer/footer.css">
+    <link rel="stylesheet" href="../header/header.css">
+    <link rel="stylesheet" href="../card/card.css">
+    <link rel="stylesheet" href="../footer/footer.css">
     
     <!-- rutas a los components -->
-    <script async src="../components/header/header.js"></script>
-    <script async src="../components/card/card.js"></script>
-    <script async src="../components/services/services.js"></script>
-    <script async src="../components/footer/footer.js"></script>
+    <script async src="../header/header.js"></script>
+    <script async src="../card/card.js"></script>
+    <script async src="../services/services.js"></script>
+    <script async src="../footer/footer.js"></script>
 
     <!-- Rutas a los archivos que poseen las funciones para agregar los components -->
     <script defer src="../services/indexServices.js"></script>
-    <script defer src="../components/header/button.js"></script>
+    <script defer src="../header/button.js"></script>
     
     <title>Services</title>
 </head>
