--- a/pages/services/indexServices.html
+++ b/pages/services/indexServices.html
@@ -10,19 +10,19 @@
 
     <!-- Rutas a los estilos -->
     <link rel="stylesheet" href="../services/indexServices.css">
-    <link rel="stylesheet" href="../header/header.css">
-    <link rel="stylesheet" href="../card/card.css">
-    <link rel="stylesheet" href="../footer/footer.css">
+    <link rel="stylesheet" href="../header.css">
+    <link rel="stylesheet" href="../card.css">
+    <link rel="stylesheet" href="../footer.css">
     
     <!-- rutas a los components -->
-    <script async src="../header/header.js"></script>
-    <script async src="../card/card.js"></script>
-    <script async src="../services/services.js"></script>
-    <script async src="../footer/footer.js"></script>
+    <script async src="../header.js"></script>
+    <script async src="../card.js"></script>
+    <script async src="../services.js"></script>
+    <script async src="../footer.js"></script>
 
     <!-- Rutas a los archivos que poseen las funciones para agregar los components -->
     <script defer src="../services/indexServices.js"></script>
-    <script defer src="../header/button.js"></script>
+    <script defer src="../button.js"></script>
     
     <title>Services</title>
 </head>
@@ -36,7 +36,7 @@
         <section class="welcome">
             <!--Contenedor del header de services-->
             <h2 class="welcome__title">Mis <span class="highlighter">Servicios</span></h2>
-            <img class="welcome__img" src="assets/services.png" alt="">
+            <img class="welcome__img" src="../services.png" alt="">
         </section>
 
         <section class="services__shelled">
