--- a/pages/services/indexServices.html
+++ b/pages/services/indexServices.html
@@ -9,20 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <!-- Rutas a los estilos -->
-    <link rel="stylesheet" href="../services/indexServices.css">
-    <link rel="stylesheet" href="../header.css">
-    <link rel="stylesheet" href="../card.css">
-    <link rel="stylesheet" href="../footer.css">
+    <link rel="stylesheet" href="./services/indexServices.css">
+    <link rel="stylesheet" href="./header.css">
+    <link rel="stylesheet" href="./card.css">
+    <link rel="stylesheet" href="./footer.css">
     
     <!-- rutas a los components -->
-    <script async src="../header.js"></script>
-    <script async src="../card.js"></script>
-    <script async src="../services.js"></script>
-    <script async src="../footer.js"></script>
+    <script async src="./header.js"></script>
+    <script async src="./card.js"></script>
+    <script async src="./services.js"></script>
+    <script async src="./footer.js"></script>
 
     <!-- Rutas a los archivos que poseen las funciones para agregar los components -->
-    <script defer src="../services/indexServices.js"></script>
-    <script defer src="../button.js"></script>
+    <script defer src="./services/indexServices.js"></script>
+    <script defer src="./button.js"></script>
     
     <title>Services</title>
 </head>
