--- a/pages/services/indexServices.html
+++ b/pages/services/indexServices.html
@@ -11,14 +11,14 @@
     <!-- Rutas a los estilos -->
     <link rel="stylesheet" href="../services/indexServices.css">
     <link rel="stylesheet" href="../../components/header/header.css">
-    <link rel="stylesheet" href="../../card.css">
-    <link rel="stylesheet" href="../../footer.css">
+    <link rel="stylesheet" href="../../components/card/card.css">
+    <link rel="stylesheet" href="../../components/footer/footer.css">
     
     <!-- rutas a los components -->
     <script async src="../../components/header/header.js"></script>
-    <script async src="../../card.js"></script>
-    <script async src="../../services.js"></script>
-    <script async src="../../footer.js"></script>
+    <script async src="../../components/card/card.js"></script>
+    <script async src="../../components/services/services.js"></script>
+    <script async src="../../components/footer/footer.js"></script>
 
     <!-- Rutas a los archivos que poseen las funciones para agregar los components -->
     <script defer src="../services/indexServices.js"></script>
@@ -36,7 +36,7 @@
         <section class="welcome">
             <!--Contenedor del header de services-->
             <h2 class="welcome__title">Mis <span class="highlighter">Servicios</span></h2>
-            <img class="welcome__img" src="../services.png" alt="">
+            <img class="welcome__img" src="../../assets/services.png" alt="">
         </section>
 
         <section class="services__shelled">
