--- a/pages/portfolio/indexPortfolio.html
+++ b/pages/portfolio/indexPortfolio.html
@@ -10,18 +10,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="pages/portfolio/indexPortfolio.css">
-    <link rel="stylesheet" href="components/header/header.css">
-    <link rel="stylesheet" href="components/card/card.css">
-    <link rel="stylesheet" href="components/footer/footer.css">
+    <link rel="stylesheet" href="../portfolio/indexPortfolio.css">
+    <link rel="stylesheet" href="../../components/header/header.css">
+    <link rel="stylesheet" href="../../components/card/card.css">
+    <link rel="stylesheet" href="../../components/footer/footer.css">
 
-    <script src="components/header/header.js"></script>
-    <script src="components/card/card.js"></script>
-    <script src="components/portfolio/portfolio.js"></script>
-    <script src="components/footer/footer.js"></script>
+    <script src="../../components/header/header.js"></script>
+    <script src="../../components/card/card.js"></script>
+    <script src="../../components/portfolio/portfolio.js"></script>
+    <script src="../../components/footer/footer.js"></script>
 
-    <script defer src="pages/portfolio/indexPortfolio.js"></script>
-    <script defer src="components/header/button.js"></script>
+    <script defer src="../portfolio/indexPortfolio.js"></script>
+    <script defer src="../../components/header/button.js"></script>
 
     <title>Document</title>
 </head>
@@ -35,7 +35,7 @@
         <section class="welcome">
             <!--Contenedor del header de services-->
             <h2 class="welcome__title">Mis <span class="highlighter">Proyectos</span></h2>
-            <img class="welcome__img" src="assets/portfolio.png" alt="">
+            <img class="welcome__img" src="../../assets/portfolio.png" alt="">
         </section>
 
         <section class="portfolio__shelled">
