--- a/pages/contact/indexContact.html
+++ b/pages/contact/indexContact.html
@@ -9,18 +9,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../contact/indexContact.css">
-    <link rel="stylesheet" href="../../components/header/header.css">
-    <link rel="stylesheet" href="../../components/form/form.css">
-    <link rel="stylesheet" href="../../components/footer/footer.css">
+    <base href="https://LautyVazquez15.github.io/Web-Components/">
 
-    <script src="../../components/header/header.js"></script>
-    <script src="../../components/form/form.js"></script>
-    <script src="../../components/footer/footer.js"></script>
+    <link rel="stylesheet" href="indexContact.css">
+    <link rel="stylesheet" href="components/header/header.css">
+    <link rel="stylesheet" href="components/form/form.css">
+    <link rel="stylesheet" href="components/footer/footer.css">
 
-    <script defer src="../contact/indexContact.js"></script>
-    <script defer src="../../components/header/button.js"></script>
-    <script defer src="../../components/form/menu.js"></script>
+    <script src="components/header/header.js"></script>
+    <script src="components/form/form.js"></script>
+    <script src="components/footer/footer.js"></script>
+
+    <script defer src="indexContact.js"></script>
+    <script defer src="components/header/button.js"></script>
+    <script defer src="components/form/menu.js"></script>
 
     <title>Home</title>
 </head>
