--- a/pages/services/indexServices.html
+++ b/pages/services/indexServices.html
@@ -38,7 +38,7 @@
         <section class="welcome">
             <!--Contenedor del header de services-->
             <h2 class="welcome__title">Mis <span class="highlighter">Servicios</span></h2>
-            <img class="welcome__img" src="../../assets/services.png" alt="">
+            <img class="welcome__img" src="assets/services.png" alt="">
         </section>
 
         <section class="services__shelled">
