--- a/pages/services/indexServices.html
+++ b/pages/services/indexServices.html
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="components/footer/footer.css">
 
     <!-- rutas a los components -->
-    <script async src="components/header/header.js"></script>
-    <script async src="components/card/card.js"></script>
-    <script async src="components/services/services.js"></script>
-    <script async src="components/footer/footer.js"></script>
+    <script defer src="components/header/header.js"></script>
+    <script defer src="components/card/card.js"></script>
+    <script defer src="components/services/services.js"></script>
+    <script defer src="components/footer/footer.js"></script>
 
     <!-- Rutas a los archivos que poseen las funciones para agregar los components -->
     <script defer src="pages/services/indexServices.js"></script>
