--- a/pages/contact/indexContact.html
+++ b/pages/contact/indexContact.html
@@ -11,16 +11,16 @@
 
     <base href="https://LautyVazquez15.github.io/Web-Components/">
 
-    <link rel="stylesheet" href="indexContact.css">
+    <link rel="stylesheet" href="pages/contact/indexContact.css">
     <link rel="stylesheet" href="components/header/header.css">
     <link rel="stylesheet" href="components/form/form.css">
     <link rel="stylesheet" href="components/footer/footer.css">
 
-    <script src="components/header/header.js"></script>
-    <script src="components/form/form.js"></script>
-    <script src="components/footer/footer.js"></script>
+    <script defer src="components/header/header.js"></script>
+    <script defer src="components/form/form.js"></script>
+    <script defer src="components/footer/footer.js"></script>
 
-    <script defer src="indexContact.js"></script>
+    <script defer src="pages/contact/indexContact.js"></script>
     <script defer src="components/header/button.js"></script>
     <script defer src="components/form/menu.js"></script>
 
