--- a/pages/portfolio/indexPortfolio.html
+++ b/pages/portfolio/indexPortfolio.html
@@ -11,17 +11,17 @@
 
     <base href="https://LautyVazquez15.github.io/Web-Components/">
 
-    <link rel="stylesheet" href="indexPortfolio.css">
+    <link rel="stylesheet" href="pages/portfolio/indexPortfolio.css">
     <link rel="stylesheet" href="components/header/header.css">
     <link rel="stylesheet" href="components/card/card.css">
     <link rel="stylesheet" href="components/footer/footer.css">
 
-    <script src="components/header/header.js"></script>
-    <script src="components/card/card.js"></script>
-    <script src="components/portfolio/portfolio.js"></script>
-    <script src="components/footer/footer.js"></script>
+    <script defer src="components/header/header.js"></script>
+    <script defer src="components/card/card.js"></script>
+    <script defer src="components/portfolio/portfolio.js"></script>
+    <script defer src="components/footer/footer.js"></script>
 
-    <script defer src="indexPortfolio.js"></script>
+    <script defer src="/pages/portfolio/indexPortfolio.js"></script>
     <script defer src="components/header/button.js"></script>
 
     <title>Document</title>
@@ -36,7 +36,7 @@
         <section class="welcome">
             <!--Contenedor del header de services-->
             <h2 class="welcome__title">Mis <span class="highlighter">Proyectos</span></h2>
-            <img class="welcome__img" src="../../assets/portfolio.png" alt="">
+            <img class="welcome__img" src="assets/portfolio.png" alt="">
         </section>
 
         <section class="portfolio__shelled">
